# backend/openapi.json
@@ -275,49 +275,26 @@
       }
     },
     "/api/v1/communities": {
-      "get": {
-        "tags": [
-          "communities"
-        ],
-        "summary": "List Communities",
-        "operationId": "list_communities_api_v1_communities_get",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/CommunityOut"
-                  },
-                  "type": "array",
-                  "title": "Response List Communities Api V1 Communities Get"
-                }
-              }
-            }
-          }
-        },
-        "security": [
-          {
-            "HTTPBearer": []
-          }
-        ]
-      },
       "post": {
         "tags": [
           "communities"
         ],
         "summary": "Create Community",
         "operationId": "create_community_api_v1_communities_post",
+        "security": [
+          {
+            "HTTPBearer": []
+          }
+        ],
         "requestBody": {
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/CommunityIn"
               }
             }
-          },
-          "required": true
+          }
         },
         "responses": {
           "201": {
@@ -340,12 +317,63 @@
               }
             }
           }
-        },
+        }
+      },
+      "get": {
+        "tags": [
+          "communities"
+        ],
+        "summary": "List Communities",
+        "operationId": "list_communities_api_v1_communities_get",
         "security": [
           {
             "HTTPBearer": []
           }
-        ]
+        ],
+        "parameters": [
+          {
+            "name": "search",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Search"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CommunityOut"
+                  },
+                  "title": "Response List Communities Api V1 Communities Get"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/api/v1/communities/{id}": {
@@ -1190,6 +1218,27 @@
             "additionalProperties": true,
             "type": "object",
             "title": "Settings"
+          },
+          "towers": {
+            "type": "integer",
+            "maximum": 200.0,
+            "minimum": 0.0,
+            "title": "Towers",
+            "default": 0
+          },
+          "floors_per_tower": {
+            "type": "integer",
+            "maximum": 200.0,
+            "minimum": 0.0,
+            "title": "Floors Per Tower",
+            "default": 0
+          },
+          "flats_per_floor": {
+            "type": "integer",
+            "maximum": 100.0,
+            "minimum": 0.0,
+            "title": "Flats Per Floor",
+            "default": 0
           }
         },
         "type": "object",
